# speckit-salesforce

./: .gitignore  DIRECT_INSTALL_FROM_GITHUB.md  INSTALLATION_GUIDE.md  README.md  build-release.py  install.sh  latest-release.json  pyproject.toml  sample-constitution.md  update.sh
.cursor/: hooks.json
.cursor/hooks/: dashboard-reminder.md
.cursor/rules/: dashboard-enforcement.md  grounding-guardrails.mdc  wireframe-salesforce-anatomy.mdc
.cursor/skills/speckit-dashboard/: SKILL.md
.cursor/skills/speckit-init/: SKILL.md
.cursor/skills/speckit-testcases/: SKILL.md
.cursor/skills/speckit-wireframe/: SKILL.md
.githooks/: pre-commit
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  domain.md  project-details.md  regulatory.md  taxonomy.md
.specify/scripts/: log-session.py  publish-dashboard.sh  sync-dashboard-data.py  sync-testcases-data.py
.specify/scripts/bash/: setup-dashboard.sh  setup-testcases.sh
.specify/templates/: progress-tracker-template.json  spec-template.md  test-cases-template.md
.specify/workflows/: workflow-registry.json
docs/: README.md  SpecKit-How-It-Works.html  jira-integration.md  progress-dashboard.html  progress-tracker.json
src/speckit_salesforce/: __init__.py  cli.py
